--- a/nuxeo-km-frontend/src/main/app/elements/nuxeo-article-search-filter.html
+++ b/nuxeo-km-frontend/src/main/app/elements/nuxeo-article-search-filter.html
@@ -46,7 +46,7 @@ Example: <nuxeo-article-search-filter articles={{articles}}></nuxeo-article-sear
     </paper-input>
 
     <div class="filterItem">
-      <div class="filterItemLabel">Region</div>
+      <div class="filterItemLabel">Channel</div>
       <nuxeo-checkbox-aggregation name='article_region_agg' aggregations='[[aggregations]]' value="{{regionAgg}}"></nuxeo-checkbox-aggregation>
       <div class="filterItemLabel">Category</div>
       <nuxeo-checkbox-aggregation name='article_category_agg' aggregations='[[aggregations]]' value="{{categoAgg}}"></nuxeo-checkbox-aggregation>
