--- a/nuxeo-km-frontend/src/main/app/styles/app-theme.html
+++ b/nuxeo-km-frontend/src/main/app/styles/app-theme.html
@@ -47,6 +47,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --paper-tabs-selection-bar-color: #213f7d;
     --paper-tab-ink: #213f7d;
     --paper-input-container-focus-color: #213f7d;
+
+    --app-toolbar-background-color: var(--paper-menu-background-color);
+    --app-toolbar-background-wk: var(--paper-menu-background-color);
+    --app-toolbar-background-moz: var(--paper-menu-background-color);
+    --app-toolbar-color: var(--primary-title-color);
   }
   /* General styles */
 
