add download pdf button

--- a/nuxeo-km-frontend/src/main/app/elements/nuxeo-article-app.html
+++ b/nuxeo-km-frontend/src/main/app/elements/nuxeo-article-app.html
@@ -118,7 +118,7 @@ Example: <nuxeo-article-app></nuxeo-article-app>
               <nuxeo-article-search region={{region}}/>
             </div>
             <div name="display">
-              <nuxeo-article-display id="articleDisplay" userforarticle=[[currentUser]] document-id={{docId}}/>
+              <nuxeo-article-display id="articleDisplay" userforarticle=[[currentUser]] document-id={{docId}} region={{region}}/>
             </div>
             <div name="login">
               <nuxeo-km-login region={{region}} base-url=[[baseUrl]] page={{page}}></nuxeo-km-login>
