--- a/nuxeo-km-frontend/src/main/app/elements/nuxeo-article-home-widget.html
+++ b/nuxeo-km-frontend/src/main/app/elements/nuxeo-article-home-widget.html
@@ -62,7 +62,7 @@ Example: <nuxeo-article-home-widget></nuxeo-article-home-widget>
         region: {
           type: String,
           notify: true,
-          value: 'Region'
+          value: 'Channel'
         },
         color: {
           type: String,
