--- a/nuxeo-km-frontend/src/main/app/elements/nuxeo-km-login.html
+++ b/nuxeo-km-frontend/src/main/app/elements/nuxeo-km-login.html
@@ -76,7 +76,7 @@ Example: <nuxeo-km-login></nuxeo-km-login>
     </style>
     <div class="appheader">
       <div class="logologin">
-        <span class='app-title'>Nuxeo Knowledge Management</span>
+        <span class='app-title'>Optanix Knowledge Management</span>
       </div>
       <div class="card-container" class="red-header">
         <paper-card heading="Select Your Channel" elevation="0">
